syntax = "proto3";

package admin.service.v1;
option go_package = "kratos-blog/gen/api/go/admin/service/v1;v1";

import "third_party/openapiv3/annotations.proto";
import "third_party/google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/pagination.proto";
import "content/service/v1/link.proto";

option (openapi.v3.document) = {
  info: {
    title: "链接管理接口";
    description: "链接管理";
    version: "1.0";
  }
};

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 链接服务
service LinkService {
  // 获取链接列表
  rpc ListLink (pagination.PagingRequest) returns (content.service.v1.ListLinkResponse) {
    option (google.api.http) = {
      get: "/blog/v1/links"
    };
  }

  // 获取链接数据
  rpc GetLink (content.service.v1.GetLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      get: "/blog/v1/links/{id}"
    };
  }

  // 创建链接
  rpc CreateLink (content.service.v1.CreateLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      post: "/blog/v1/links"
      body: "*"
    };
  }

  // 更新链接
  rpc UpdateLink (content.service.v1.UpdateLinkRequest) returns (content.service.v1.Link) {
    option (google.api.http) = {
      put: "/blog/v1/links/{id}"
      body: "link"
    };
  }

  // 删除链接
  rpc DeleteLink (content.service.v1.DeleteLinkRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/links/{id}"
    };
  }
}
